storage and search for notes

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Notes demo implemented with JavaScript",
   "dependencies": {
-    "angular": "1.4.x"
+    "angular": "1.4.x",
+    "underscore": "*"
   }
 }
