--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-notes",
-  "version": "0.0.0",
-  "description": "Notes demo implemented with JavaScript",
+  "version": "0.0.1",
+  "description": "Notes demo implemented with AngularJS",
   "dependencies": {
     "angular": "1.4.x",
     "underscore": "*"
