--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
   },
   "devDependencies" : {
     "chai": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "babelify": "7.2.0",
+    "grunt": "~0.4.2",
+    "grunt-browserify": "^4.0.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-handlebars": "0.7.0-4",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-processhtml": "~0.3.3",
+    "grunt-contrib-htmlmin": "~0.2.0",
+    "grunt-eslint": "^17.1.0",
+    "grunt-mocha-test": "^0.12.7"
   }
 }
