--- a/package.json
+++ b/package.json
@@ -2,26 +2,29 @@
   "name": "js-notes",
   "version": "0.0.1",
   "description": "Notes demo implemented with AngularJS",
+  "scripts": {
+    "test": "echo \"- no test specified -\"",
+    "prepublish": "npm run build",
+    "build": "webpack",
+    "develop": "webpack --watch"
+  },
   "dependencies": {
     "angular": "1.4.x"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.0.15",
     "babelify": "7.2.0",
     "chai": "*",
-    "grunt": "~0.4.2",
-    "grunt-browserify": "^4.0.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-cssmin": "^0.12.3",
-    "grunt-contrib-handlebars": "1.0.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.1.0",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-processhtml": "~0.3.3",
-    "mocha": "*"
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "mocha": "*",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-loader": "^1.3.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1"
   }
 }
