--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies" : {
     "chai": "*",
     "mocha": "*",
+    "dexie": "^1.5.1",
     "grunt": "~0.4.2",
     "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
