--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babelify": "7.2.0",
     "chai": "*",
+    "dexie": "^1.5.1",
     "grunt": "~0.4.2",
     "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
