--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Notes demo implemented with AngularJS",
   "scripts": {
-    "test": "echo \"- no test specified -\"",
-    "prepublish": "npm run build",
+    "test": "mocha --compilers js:babel-register ./test/**/*.js",
+    "prepublish": "npm run build && npm run test",
     "build": "webpack",
     "develop": "webpack --watch"
   },
@@ -15,6 +15,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.0.15",
+    "babel-register": "^6.26.0",
     "babelify": "7.2.0",
     "chai": "*",
     "css-loader": "^0.28.0",
