--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.0.15",
+    "babel-register": "^6.26.0",
     "babelify": "7.2.0",
     "chai": "*",
     "dexie": "^1.5.1",
