--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "*",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "mocha": "*",
