--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-register": "^6.26.0",
     "babelify": "7.2.0",
     "chai": "*",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.30.1",
