--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "angular": "1.4.x"
   },
   "devDependencies": {
+    "browserify": "^14.4.0",
     "chai": "^4.1.2",
     "dexie": "^1.5.1",
     "gulp": "^3.9.1",
@@ -19,6 +20,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2",
     "mocha": "^3.5.3",
-    "run-sequence": "^2.1.0"
+    "run-sequence": "^2.1.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
