--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "angular": "1.4.x"
   },
-  "devDependencies" : {
-    "chai": "*",
-    "mocha": "*",
+  "devDependencies": {
+    "chai": "^4.1.2",
     "dexie": "^1.5.1",
     "grunt": "~0.4.2",
     "grunt-browserify": "^4.0.0",
@@ -15,12 +14,13 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-handlebars": "1.0.0",
+    "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-processhtml": "~0.3.3",
-    "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-eslint": "^17.1.0",
-    "grunt-mocha-test": "^0.12.7"
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-processhtml": "~0.3.3",
+    "mocha": "^3.5.3"
   }
 }
