--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-register": "^6.26.0",
     "babelify": "7.2.0",
-    "chai": "*",
+    "chai": "^4.1.2",
     "dexie": "^1.5.1",
     "grunt": "~0.4.2",
     "grunt-browserify": "^4.0.0",
@@ -24,6 +24,6 @@
     "grunt-eslint": "^17.1.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-processhtml": "~0.3.3",
-    "mocha": "*"
+    "mocha": "^3.5.3"
   }
 }
