--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-register": "^6.26.0",
     "babelify": "7.2.0",
-    "chai": "*",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
+    "dexie": "^1.5.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
-    "mocha": "*",
+    "mocha": "^3.5.3",
     "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.7.0"
   }
 }
