--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "Notes demo implemented with AngularJS",
   "scripts": {
-    "test": "mocha --compilers js:babel-register ./test/**/*.js",
-    "prepublish": "npm run build && npm run test",
+    "test": "mocha --compilers js:babel-register ./src/**/*.test.js",
+    "report": "cross-env BABEL_ENV=test nyc mocha ./src/**/*.test.js",
+    "coverage": "cross-env BABEL_ENV=test nyc --reporter=lcov --report-dir=./coverage mocha ./src/**/*.test.js",
+    "prepublish": "npm run build && npm run coverage",
     "build": "webpack",
     "develop": "webpack --watch"
   },
@@ -14,18 +16,23 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-register": "^6.26.0",
     "babelify": "7.2.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.0",
     "dexie": "^1.5.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "istanbul": "^0.4.5",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "mocha": "^3.5.3",
+    "nyc": "^12.0.2",
     "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
