--- a/.nycrc
+++ b/.nycrc
@@ -5,5 +5,8 @@
     ],
     "sourceMap": false,
     "instrument": false,
-    "all": false
+    "all": false,
+    "include": [
+        "src"
+    ]
 }
