--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
 			},
 			"console": "integratedTerminal",
 			"internalConsoleOptions": "neverOpen",
-			"cwd": "${workspaceFolder}/src"
+			"cwd": "${workspaceFolder}"
 		}
 	]
 }
